--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.typewriter h2 {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+
+  border-right: 0.1em solid #ccc;
+
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.05em;
+  /* Adjust as needed */
+  animation: typing 2s steps(40, end), blink-caret 1.5s 2s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+
+  50% {
+    border-color: #ccc;
+  }
+}
